--- a/src/scss/component/_button.scss
+++ b/src/scss/component/_button.scss
@@ -103,3 +103,41 @@
 #scroll-top:hover {
     transform: translateY(-7%);
 }
+
+
+.quantity-control {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: fit-content;
+    background: white;
+    border-radius: 10px;
+    padding: 12px 5px;
+  }
+  
+  .quantity-btn {
+    background: transparent;
+    border: none;
+    outline: none;
+    margin: 0;
+    padding: 0px 8px;
+    cursor: pointer;
+  }
+  .quantity-input {
+    outline: none;
+    user-select: none;
+    text-align: center;
+    width: 47px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: transparent;
+    border: none;
+    font-weight: bold;
+    color: black;
+  }
+  .quantity-input::-webkit-inner-spin-button,
+  .quantity-input::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
