--- a/src/scss/component/_section.scss
+++ b/src/scss/component/_section.scss
@@ -2087,7 +2087,7 @@ section.touch {
     padding: 106px 0;
 
     @include mobile {
-        padding: 70px 0;
+        padding: 40px 0;
     }
 
     .container {
@@ -3253,4 +3253,38 @@ section.touch {
 
 .bannerSwiper {
     position: relative;
+}
+
+
+.new-sc-button {
+    background: linear-gradient(264.28deg, #0291f7 -38.2%, #0058c6 103.12%);
+    border-radius: 8px;
+    padding: 8px 20px;
+    color: #fff;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &::after {
+        background: linear-gradient(90deg, rgba(255, 255, 255, 0.13) 0px, rgba(255, 255, 255, 0.13) 77%, rgba(255, 255, 255, 0.5) 92%, rgba(255, 255, 255, 0));
+        content: "";
+        height: 200%;
+        left: -210%;
+        opacity: 0;
+        position: absolute;
+        top: -50%;
+        transition: all 0.7s ease 0s;
+        width: 200%;
+    }
+
+    &:hover::after {
+        left: -30%;
+        opacity: 1;
+        top: -20%;
+        transition-duration: 0.7s, 0.7s, 0.15s;
+        transition-property: left, top, opacity;
+        transition-timing-function: linear;
+    }
 }
