--- a/src/scss/component/_banner-top.scss
+++ b/src/scss/component/_banner-top.scss
@@ -108,6 +108,7 @@
         position: relative;
 
         @include mobile {
+            display: none;
             padding: 40px 0;
         }
         
